# LA2A_Compressor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resource/: LA2Aeditor.uidesc
source/: LA2Acids.h  LA2Acontroller.cpp  LA2Acontroller.h  LA2Aentry.cpp  LA2Aprocessor.cpp  LA2Aprocessor.h  version.h
